# wayfinder

./: .eslintrc.json  .gitignore  Cargo.toml  LICENSE  README.md  create_commits.ps1  jest.config.js  package.json
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  pathfinding.rs  processor.rs  state.rs
src/: index.ts  instructions.ts  pathfinding.ts  state.ts  types.ts  wayfinder.ts
tests/: pathfinding.test.ts
