[package]
name = "wayfinder"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A* pathfinding-inspired swap route optimizer for Solana"

[lib]
crate-type = ["cdylib", "lib"]
name = "wayfinder"

[dependencies]
solana-program = "1.18.0"
borsh = "0.10.3"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
tokio = { version = "1.35", features = ["full"] }

[features]
no-entrypoint = []

